# ForzaLiveryStudio

./: .gitignore  CMakeLists.txt  README.md
assets/: CompVisibility.xpm  Cursor.xpm  CursorPipette.xpm  ImportCar.xpm  ImportGuide.xpm  MenuCopy.xpm  MenuCut.xpm  MenuDelete.xpm  MenuExit.xpm  MenuExportFlat.xpm  MenuFoldAllGroups.xpm  MenuGroup.xpm  MenuNewProject.xpm  MenuOpenCGroup.xpm  MenuOpenFolder.xpm  MenuPaste.xpm  MenuRevert.xpm  MenuUngroupFlat.xpm  PropertyColor.xpm  PropertyDebug.xpm  PropertyInvisible.xpm  PropertyLocked.xpm  PropertyMask.xpm  PropertyName.xpm  PropertyShapeID.xpm  PropertyUnlocked.xpm  PropertyVisible.xpm  PropertyXY.xpm  ShapeBrowserFavOff.xpm  ShapeBrowserFavOn.xpm  ShapeBrowserSearch.xpm  ToolBucket.xpm  ToolLining.xpm  ToolOpacity.xpm  ToolPipette.xpm  ToolRotateE.xpm  ToolRotateN.xpm  ToolRotateNE.xpm  ToolRotateNW.xpm  ToolRotateS.xpm  (+21 more)
assets/cars/: car_ids.json
assets/vector/: shape_names.json
docs/: AdvancedPLAN.md  CGROUP.md  CLIVERY.md  CODESTYLE.md  DEV.md  FM_CGROUP.md  FM_HEADER.md  FM_IMPORT_PLAN.md  FM_LIVERY.md  GAMEDATA.md  HEADER.md  MANUAL.md  TODO.md
src/: main.cpp
src/core/: binary_io.cpp  binary_io.h  car_scene.cpp  car_scene.h  cgroup_codec.cpp  cgroup_codec.h  core_types.cpp  core_types.h  fh6_core.cpp  fh6_core.h  flat_payload.cpp  flat_payload.h  fm_codec.cpp  fm_codec.h  game_paths.cpp  game_paths.h  header_codec.cpp  header_codec.h  layer.cpp  layer.h  livery_codec.cpp  livery_codec.h  livery_masks.cpp  livery_masks.h  manufacturer_colors.cpp  manufacturer_colors.h  material_hashes.h  matrix_math.cpp  matrix_math.h  model_bundle.cpp  model_bundle.h  model_geometry.cpp  model_geometry.h  model_material.cpp  model_material.h  nested_payload.cpp  nested_payload.h  paint_finish_catalog.cpp  paint_finish_catalog.h  project_codec.cpp  (+16 more)
src/gui/: key_bindings.cpp  key_bindings.h
src/gui/app/: car_registry.cpp  car_registry.h  dock_chrome.cpp  dock_chrome.h  gui_assets.cpp  gui_assets.h  gui_constants.h  main_window.cpp  main_window.h  main_window_edit.cpp  main_window_internal.h  main_window_io.cpp  main_window_project.cpp  main_window_ui.cpp  perf_utils.h  settings_dialog.cpp  settings_dialog.h  theme_manager.cpp  theme_manager.h
src/gui/canvas/: advancing_front.cpp  advancing_front.h  bucket_fill.cpp  bucket_fill.h  canvas_camera.h  canvas_tools.cpp  canvas_tools.h  car_model_renderer.cpp  car_model_renderer.h  drag_cursors.cpp  drag_cursors.h  lining_fill.cpp  lining_fill.h  native_shape_renderer.cpp  native_shape_renderer.h  path_interaction.h  pen_fill.cpp  pen_fill.h  polygon_mesh.cpp  polygon_mesh.h  project_canvas.cpp  project_canvas.h  project_canvas_bucket.cpp  project_canvas_cursor.cpp  project_canvas_drag.cpp  project_canvas_events.cpp  project_canvas_hit.cpp  project_canvas_internal.h  project_canvas_paint.cpp  project_canvas_pen.cpp  region_extract.cpp  region_extract.h  region_fill.cpp  region_fill.h  region_layer_plan.cpp  region_layer_plan.h
src/gui/state/: editor_state.cpp  editor_state.h  editor_state_clipboard.cpp  editor_state_grouping.cpp  editor_state_internal.h  editor_state_selection.cpp  editor_state_snapshot.cpp  editor_state_util.cpp  layer_tree_model.cpp  layer_tree_model.h  scene_entry.h  scene_view.h
src/gui/widgets/: car_preview_widget.cpp  car_preview_widget.h  clipboard_buffer_widget.cpp  clipboard_buffer_widget.h  color_palette_widget.cpp  color_palette_widget.h  font_glyphs.cpp  font_glyphs.h  header_metadata_widget.cpp  header_metadata_widget.h  image_io.cpp  image_io.h  image_preprocess_dialog.cpp  image_preprocess_dialog.h  image_preprocessor.cpp  image_preprocessor.h  import_asset_dialog.cpp  import_asset_dialog.h  import_locations.cpp  import_locations.h  layer_state_delegate.cpp  layer_state_delegate.h  layer_tree_view.cpp  layer_tree_view.h  livery_section_bar.cpp  livery_section_bar.h  property_panel.cpp  property_panel.h  shape_geometry_store.cpp  shape_geometry_store.h  shape_name_store.cpp  shape_name_store.h  shapes_browser_widget.cpp  shapes_browser_widget.h
tmp/: data  header
tools/: analyze_region_path_optimization.py  build.ps1  configure.ps1  gen_xpm.ps1  gen_xpm.py  guide_preprocess_metadata_test.cpp  image_preprocessor_test.cpp  region_path_optimization_results_viewer.html  region_pen_conversion_test.cpp  run.ps1
tools/livery_compare/: main.cpp
tools/model_dump/: main.cpp
tools/pack_decals/: main.cpp
tools/preprocessing/: manual_preprocess_test_v7.py  preprocessing.py
